<resources>
    <!-- mainActivity -->
    <string name="app_name">ExerciseMemo</string>
    <string name="mainActivity_title">Welcome to ExerciseMemo</string>
    <string name="mainActivity_calendarButton">Calendars</string>
    <string name="mainActivity_calculatorButton">Calculators</string>

    <!-- calendarActivity -->
    <string name="calendarActivity_menuButton">menu button</string>
    <string name="calendarActivity_drawer_open">Main menu is open</string>
    <string name="calendarActivity_drawer_close">Main menu is closed</string>
    <string name="calendarActivity_drawer_showTrainingsButton">Practices</string>
    <string name="calendarActivity_drawer_toBMRCalculator">BMR Counter</string>

    <!-- dayActivity -->
    <string name="dayActivity_noteInputField">Note</string>
    <string name="dayActivity_addNoteButton">Add a Note</string>
    <string name="clear_all_notes_from_device">clear all notes from device</string>

    <!-- trainingActivity -->
    <string name="trainingActivity_deleteTrainingButton">delete training</string>
    <string name="trainingActivity_trainingNameInput">training name</string>
    <string name="trainingActivity_saveTrainingIButton">save training</string>
    <string name="trainingActivity_chooseMoveButton">choose move</string>
    <string name="trainingActivity_addTrainingMoveButton">add new move</string>

    <!-- createdTrainingsActivity -->
    <string name="createdTrainingsActivity_addTrainingButton">create training</string>

    <!-- fragmentNewMoveAdding -->
    <string name="fragmentNewMoveAdding_moveNameInput">move name</string>
    <string name="fragmentNewMoveAdding_moveTimesInput">times</string>
    <string name="fragmentNewMoveAdding_moveLoopsInput">loops</string>
    <string name="fragmentNewMoveAdding_deleteMoveIButton">delete move</string>
    <string name="fragmentNewMoveAdding_saveMoveIButton">save move</string>

    <!-- common -->
    <string name="backButton">Back</string>
    <string name="xTV">x</string>


    <string name="bmr_button">BMR</string>
    <string name="laskuri_info">Info</string>
    <string name="laskurit_text">Calculators</string>
    <string name="Exercise_button">MET</string>

    <!-- WeightCalculator Static -->
    <string name="age_text">Age</string>
    <string name="weight_text">Weight</string>
    <string name="height_text">Height</string>
    <string name="buttonText">Count BMR</string>
    <string name="genderText">Gender</string>
    <string name="maleText">Man</string>
    <string name="femaleText">Woman</string>

    <!-- WeightCalculator Non-Static -->
    <string name="height_unit">%d Cm</string>
    <string name="weight_unit">%d Kg</string>
    <string name="age_unit">%d Years</string>
    <string name="output">%s Calories/Day. </string>

    <!-- ExerciseCalculator Static -->
    <string name="time_text">Time</string>
    <string name="choose_a_sport_textPromp">Choose A Sport..</string>
    <string name="calculate_calories_text">Calculate Calories</string>

    <!-- ExerciseCalculator Non-Static -->
    <string name="time_unit">%d Minutes</string>
    <string name="total_calories">Total Calories Lost %s</string>

    <!-- Calculator Information Text-->
    <string name="info_bmr_calculator_title">BMR Calculator</string>
    <string name="all_about_bmr">BMR is a estimation about the amount of calories human uses during rest.
        This is called the resting metabolic rate. The Equation used here is the Revised Harris-Benedict Equation.
        This number usually represents 60-75% of total energy consumption. There is a Stress and Activity -factor that
        has been ignored in this version of the calculation. More on that on the link below.</string>
    <string name="link_bmr"><a href="https://globalrph.com/medcalcs/harris-benedict-equation-updated-basal-metabolic-rate/">BMR Link Here</a></string>
    <string name="info_met_calculator_title">MET Calculator</string>
    <string name="all_about_met">MET stands for Metabolic EquivalenT this calculator counts how many
        calories you use per minute based on your weight the activity you are doing.
        The number estimations for each activity can be found on the link below.
        The calculations are based on them.</string>
    <string name="met_reference">Reference: American College of Sports Medicine. The Compendium of Physical Activities.
        ACSM Resource Manual 5th Edition, 2006. </string>
    <string name="link_met"><a href="http://media.hypersites.com/clients/1235/filemanager/MHC/METs.pdf">MET Table Link Here</a></string>
    <string name="copy_to_clipboard_text">copy to clipboard</string>
    <string name="user_info">User Info</string>

    <!-- UserProfile -->
    <string name="user_name">Name</string>
    <string name="user_age">Age</string>
    <string name="user_weight">Weight</string>
    <string name="user_height">Height</string>
    <string name="user_input"> </string>
    <string name="user_button">Save</string>

</resources>