<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ExerciseCalories">
    <!-- Tekijä Henri Johansson -->

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/weight_text"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/time_text"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarWeightExercise" />

    <SeekBar
        android:id="@+id/seekBarWeightExercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineExerciseBottom5" />

    <SeekBar
        android:id="@+id/seekBarTimeExercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineExerciseBottom7" />

    <TextView
        android:id="@+id/timeMinExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_unit"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/seekBarTimeExercise" />

    <TextView
        android:id="@+id/timeMaxExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_unit"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/seekBarTimeExercise"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/weightMinExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_unit"
        app:layout_constraintBottom_toBottomOf="@+id/weightText"
        app:layout_constraintEnd_toStartOf="@+id/weightText"
        app:layout_constraintStart_toStartOf="@+id/seekBarWeightExercise" />

    <TextView
        android:id="@+id/weightMaxExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_unit"
        app:layout_constraintBottom_toBottomOf="@+id/weightText"
        app:layout_constraintEnd_toEndOf="@+id/seekBarWeightExercise"
        app:layout_constraintStart_toEndOf="@+id/weightText" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:completionHint="@string/choose_a_sport_textPromp"
        android:completionThreshold="1"
        android:gravity="center"
        android:hint="@string/choose_a_sport_textPromp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineExerciseRight"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineExerciseLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineExerciseBottom3" />

    <TextView
        android:id="@+id/sumTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineExerciseRight"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guidelineExerciseLeft"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <Button
        android:id="@+id/calculate_calories_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:onClick="calculateCalories"
        android:text="@string/calculate_calories_text"
        app:backgroundTint="@android:color/holo_blue_light"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineExerciseRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineExerciseLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineExerciseBottom4" />

    <ListView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:addStatesFromChildren="false"
        android:background="@color/cardview_shadow_start_color"
        android:choiceMode="none"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineExerciseRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineExerciseLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineExerciseBottom2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="371dp"
        app:layout_constraintGuide_percent="0.90"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseBottom"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseBottom5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseBottom6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.18"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseBottom7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.26"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseBottom2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.62"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseBottom4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineExerciseBottom3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.36"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/copy_to_clipboard_text"
        android:focusable="true"
        android:onClick="clipBoardSave"
        app:backgroundTint="@color/holo_blue_light"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/guidelineExerciseBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineExerciseRight"
        app:srcCompat="?attr/actionModeCopyDrawable" />

</androidx.constraintlayout.widget.ConstraintLayout>